--- a/views/contact.pug
+++ b/views/contact.pug
@@ -17,5 +17,5 @@ block content
           label(for='message') Message
           textarea.form-control#message(type="text" name="message" rows=5 placeholder="What is the secret ingredient?")
         .contact-form__submit
-          a.btn.btn-danger.btn-lg(href="/") Cancel
-          input.btn.btn-success.btn-lg(type="submit" value="Submit")
+          a.btn.btn-lg.btn-one(href="/") Cancel
+          input.btn.btn-lg.btn-one(type="submit" value="Submit")
