--- a/views/login.pug
+++ b/views/login.pug
@@ -14,5 +14,5 @@ block content
         label(for="password") Password
         input.form-control#password(type='password' name='password' placeholder='johnny@dude.com' required)
       .contact-form__submit
-        a.btn.btn-danger.btn-lg('/') Cancel
-        input.btn.btn-success.btn-lg(type='submit' value='Submit')
+        a.btn.btn-one.btn-lg('/') Cancel
+        input.btn.btn-one.btn-lg(type='submit' value='Submit')
