--- a/views/register.pug
+++ b/views/register.pug
@@ -22,5 +22,5 @@ block content
            required
          )
       .contact-form__submit
-        a.btn.btn-danger.btn-lg('/') Cancel
-        input.btn.btn-success.btn-lg(type='submit' value='Register')
+        a.btn.btn-one.btn-lg('/') Cancel
+        input.btn.btn-one.btn-lg(type='submit' value='Register')
