--- a/views/partials/stylesheet.pug
+++ b/views/partials/stylesheet.pug
@@ -1,3 +1,3 @@
-link(rel='stylesheet' href="https://fonts.googleapis.com/css?family=Fascinate+Inline")
+link(rel='stylesheet' href="https://fonts.googleapis.com/css?family=Fascinate+Inline|Open+Sans")
 link(rel='stylesheet' href='/lib/bootstrap/dist/css/bootstrap.min.css')
 link(rel='stylesheet' href='/css/main.css')
