changed register email placeholder

--- a/views/register.pug
+++ b/views/register.pug
@@ -9,7 +9,7 @@ block content
     form(method="POST")
       .form-group
         label(for="email") Email
-        input.form-control#email(type='email' name='email' placeholder='johnny@dude.com' required)
+        input.form-control#email(type='email' name='email' placeholder='joe@user.com' required)
       .form-group
         label(for="password") Password
         input.form-control#password(type='password' name='password' placeholder='password' required)
