styled buttons on logout

--- a/views/login.pug
+++ b/views/login.pug
@@ -15,4 +15,4 @@ block content
         input.form-control#password(type='password' name='password' placeholder='johnny@dude.com' required)
       .contact-form__submit
         a.btn.btn-one.btn-lg('/') Cancel
-        input.btn.btn-one.btn-lg(type='submit' value='Submit')
+        input.btn.btn-one.btn-lg(type='submit' value='Login')
