--- a/views/logout.pug
+++ b/views/logout.pug
@@ -6,5 +6,5 @@ block content
   .login-form
     form(method='POST')
       .logout-form__submit
-        a.btn.btn-danger.btn-lg(href='/') Cancel
-        input.btn.btn-success.btn-lg(type='submit' value='Logout')
+        a.btn.btn-one.btn-lg(href='/') Cancel
+        input.btn.btn-one.btn-lg(type='submit' value='Logout')
